router-sharding/02_create_app_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-sharding
  labels:
    environment: dmz
spec:
