router-sharding/04_django.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Secret
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: django-psql-example
      template: django-psql-example
    name: django-psql-example
    namespace: test-sharding
  stringData:
    database-password: WMVsYjRRK0IvyBuX
    database-user: django
    django-secret-key: NFYbcMVt93bBBCY_vaeyKTA0Z586W3aTq6EqtlbR0Ylp8vXETH
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
      openshift.io/generated-by: OpenShiftNewApp
      service.alpha.openshift.io/dependencies: '[{"name": "postgresql", "kind": "Service"}]'
    labels:
      app: django-psql-example
      template: django-psql-example
    name: django-psql-example
    namespace: test-sharding
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 8080
    selector:
      name: django-psql-example
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: django-psql-example
      template: django-psql-example
      type: internal
    name: django-psql-example
    namespace: test-sharding
  spec:
    host: "django-psql-example-test-sharding.internalapps.top.sandbox37.opentlc.com"
    to:
      kind: Service
      name: django-psql-example
      weight: 100
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      description: Keeps track of changes in the application image
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: django-psql-example
      template: django-psql-example
    name: django-psql-example
    namespace: test-sharding
  spec:
    lookupPolicy:
      local: false
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      description: Defines how to build the application
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: django-psql-example
      template: django-psql-example
    name: django-psql-example
    namespace: test-sharding
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: django-psql-example:latest
    postCommit:
      script: ./manage.py test
    resources: {}
    source:
      git:
        uri: https://github.com/sclorg/django-ex.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: python:3.6
          namespace: openshift
      type: Source
    triggers:
    - type: ImageChange
    - type: ConfigChange
    - github:
        secret: 7JmXTVyc7iNf5UTDeUCxX0hlMkaqOMt2fUjVyMov
      type: GitHub
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: django-psql-example
      template: django-psql-example
    name: django-psql-example
    namespace: test-sharding
  spec:
    replicas: 1
    selector:
      name: django-psql-example
    strategy:
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        labels:
          name: django-psql-example
        name: django-psql-example
      spec:
        containers:
        - env:
          - name: DATABASE_SERVICE_NAME
            value: postgresql
          - name: DATABASE_ENGINE
            value: postgresql
          - name: DATABASE_NAME
            value: default
          - name: DATABASE_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: django-psql-example
          - name: DATABASE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: django-psql-example
          - name: APP_CONFIG
          - name: DJANGO_SECRET_KEY
            valueFrom:
              secretKeyRef:
                key: django-secret-key
                name: django-psql-example
          image: ' '
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 3
          name: django-psql-example
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 3
          resources:
            limits:
              memory: 512Mi
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - django-psql-example
        from:
          kind: ImageStreamTag
          name: django-psql-example:latest
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes the database server
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: django-psql-example
      template: django-psql-example
    name: postgresql
    namespace: test-sharding
  spec:
    ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
    selector:
      name: postgresql
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the database
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: django-psql-example
      template: django-psql-example
    name: postgresql
    namespace: test-sharding
  spec:
    replicas: 1
    selector:
      name: postgresql
    strategy:
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        labels:
          name: postgresql
        name: postgresql
      spec:
        containers:
        - env:
          - name: POSTGRESQL_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: django-psql-example
          - name: POSTGRESQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: django-psql-example
          - name: POSTGRESQL_DATABASE
            value: default
          image: ' '
          livenessProbe:
            exec:
              command:
              - /usr/libexec/check-container
              - --live
            initialDelaySeconds: 120
            timeoutSeconds: 10
          name: postgresql
          ports:
          - containerPort: 5432
          readinessProbe:
            exec:
              command:
              - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          volumeMounts:
          - mountPath: /var/lib/pgsql/data
            name: data
        volumes:
        - emptyDir: {}
          name: data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - postgresql
        from:
          kind: ImageStreamTag
          name: postgresql:10
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
