router-sharding/06_cakephp_mysql.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Secret
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
    name: cakephp-mysql-example
    namespace: test-sharding
  stringData:
    cakephp-secret-token: wvn_zqY7Ts4Iu3Xt6YLrxWonuVXApNzwR6b5k7aOK4gWRsILgu
    cakephp-security-salt: 0DOH06j0UYSngU3Ri17PtaNUWuTYSk6Mdj8q5iKI
    database-password: kcEJeVS1qXo0u117
    database-user: cakephp
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
      openshift.io/generated-by: OpenShiftNewApp
      service.alpha.openshift.io/dependencies: '[{"name": "mysql", "kind": "Service"}]'
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
    name: cakephp-mysql-example
    namespace: test-sharding
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 8080
    selector:
      name: cakephp-mysql-example
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
      type: internal
    name: cakephp-mysql-example
    namespace: test-sharding
  spec:
    host: "cakephp-mysql-example-test-sharding.apps.top.sandbox37.opentlc.com"
    to:
      kind: Service
      name: cakephp-mysql-example
      weight: 100
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      description: Keeps track of changes in the application image
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
    name: cakephp-mysql-example
    namespace: test-sharding
  spec:
    lookupPolicy:
      local: false
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      description: Defines how to build the application
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
    name: cakephp-mysql-example
    namespace: test-sharding
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: cakephp-mysql-example:latest
    postCommit:
      script: ./vendor/bin/phpunit
    resources: {}
    source:
      git:
        uri: https://github.com/sclorg/cakephp-ex.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: php:7.3
          namespace: openshift
      type: Source
    triggers:
    - type: ImageChange
    - type: ConfigChange
    - github:
        secret: 7IDQMYKOIbrS6M350BOJqvp64NeqTCYR5lcxHaDy
      type: GitHub
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the application server
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
    name: cakephp-mysql-example
    namespace: test-sharding
  spec:
    replicas: 1
    selector:
      name: cakephp-mysql-example
    strategy:
      recreateParams:
        pre:
          execNewPod:
            command:
            - ./migrate-database.sh
            containerName: cakephp-mysql-example
          failurePolicy: Retry
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        labels:
          name: cakephp-mysql-example
        name: cakephp-mysql-example
      spec:
        containers:
        - env:
          - name: DATABASE_SERVICE_NAME
            value: mysql
          - name: DATABASE_ENGINE
            value: mysql
          - name: DATABASE_NAME
            value: default
          - name: DATABASE_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: cakephp-mysql-example
          - name: DATABASE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: cakephp-mysql-example
          - name: CAKEPHP_SECRET_TOKEN
            valueFrom:
              secretKeyRef:
                key: cakephp-secret-token
                name: cakephp-mysql-example
          - name: CAKEPHP_SECURITY_SALT
            valueFrom:
              secretKeyRef:
                key: cakephp-security-salt
                name: cakephp-mysql-example
          - name: OPCACHE_REVALIDATE_FREQ
            value: "2"
          image: ' '
          livenessProbe:
            httpGet:
              path: /health.php
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 3
          name: cakephp-mysql-example
          ports:
          - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health.php
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 60
            timeoutSeconds: 3
          resources:
            limits:
              memory: 512Mi
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - cakephp-mysql-example
        from:
          kind: ImageStreamTag
          name: cakephp-mysql-example:latest
      type: ImageChange
    - type: ConfigChange
 - apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes the database server
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
    name: mysql
    namespace: test-sharding
  spec:
    ports:
    - name: mysql
      port: 3306
      targetPort: 3306
    selector:
      name: mysql
 - apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      description: Defines how to deploy the database
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: cakephp-mysql-example
      template: cakephp-mysql-example
    name: mysql
    namespace: test-sharding
  spec:
    replicas: 1
    selector:
      name: mysql
    strategy:
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        labels:
          name: mysql
        name: mysql
      spec:
        containers:
        - env:
          - name: MYSQL_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: cakephp-mysql-example
          - name: MYSQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: cakephp-mysql-example
          - name: MYSQL_DATABASE
            value: default
          image: ' '
          livenessProbe:
            initialDelaySeconds: 30
            tcpSocket:
              port: 3306
            timeoutSeconds: 1
          name: mysql
          ports:
          - containerPort: 3306
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - MYSQL_PWD='kcEJeVS1qXo0u117' mysql -h 127.0.0.1 -u cakephp -D default
                -e 'SELECT 1'
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          volumeMounts:
          - mountPath: /var/lib/mysql/data
            name: data
        volumes:
        - emptyDir: {}
          name: data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - mysql
        from:
          kind: ImageStreamTag
          name: mysql:5.7
          namespace: openshift
      type: ImageChange
    - type: ConfigChange
